<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_card_img"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.106" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_card_img">

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_name" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_flavor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_desc" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_short_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_desc2" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_set" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_type" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_faction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_faction" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_rarity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_rarity" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_attack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_attack" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_cost" />

                    <com.scafisystems.classichearthstonecards.presenter.components.CardTextView
                        android:id="@+id/txt_card_health"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:title="@string/txt_health" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>